# DogSense

./: .gitignore  README.md  app.py  label_encoder.pkl  pipeline.py  pyproject.toml  scaler.pkl
.github/workflows/: main_dogsense.yml
templates/: index.html
