[project]
name = "dogsense-gui"
version = "0.1.0"
description = "Dog behavior analysis application with Flask API and web frontend"
readme = "README.md"
requires-python = ">=3.8,<3.14"
dependencies = [
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
    "flask-socketio>=5.0.0",
    "opencv-python>=4.5.0",
    "pillow>=8.0.0",
    "tensorflow>=2.13.0,<2.18.0",
    "ultralytics>=8.0.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "joblib>=1.0.0",
    "werkzeug>=2.0.0",
    "eventlet>=0.39.1",
]

[tool.uv]
dev-dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0"
]
